Fixes #52 adds photos. note that doesn't load photos on mobile view but should be okay

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -230,6 +230,17 @@ div.prize-icon img {
     }
 }
 
+.presenter {
+    img {
+        height: 75px;
+    }
+}
+
+div.presentation-content {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
 .img-responsive {
     margin: 0 auto;
 }
